# Taskdown

./: .gitignore  README.md  REMOTE_WORKSPACE_API.md  example.md  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/: copilot-instructions.md
.github/workflows/: backend-ci.yml  ci.yml  cloudflare-worker-ci.yml  deploy.yml
backend/: CI.md  Cargo.toml  README.md  taskdown.db-shm  taskdown.db-wal
backend/src/: auth.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs
backend/tests/: integration_tests.rs
cloudflare-backend/: .gitignore  AUTHENTICATION.md  CI_WORKFLOW.md  Cargo.toml  README.md  TESTING.md  package-lock.json  package.json  schema.sql  test-runner.sh  validate.sh  wrangler.toml
cloudflare-backend/config/: cors-origins.json
cloudflare-backend/src/: ai.rs  auth.rs  config.rs  database.rs  handlers.rs  lib.rs  models.rs
cloudflare-backend/src/templates/: registration.html
cloudflare-backend/tests/: ai_test.rs  auth_test.rs  models_test.rs
public/: index.html
src/: App.css  App.tsx  cli.ts  constants.ts  converters.ts  filterUtils.ts  parser-utils.ts  parser.ts  remoteClient.ts  sampleData.ts  serializer.ts  types.ts  workspaceService.ts
src/__tests__/: board-file-validation.test.tsx  converters.test.ts  dashboard.test.tsx  filterUtils.test.ts  integration.test.ts  parser-edge-cases.test.ts  remoteWorkspace.test.ts  useLocalStorage.test.tsx
src/components/: ActivityLog.css  ActivityLog.tsx  Analytics.css  Analytics.tsx  Board.css  Board.tsx  Card.css  Card.tsx  Checklist.css  Checklist.tsx  (+16 more)
(+2 files in other folders)
