[package]
name = "taskdown-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskdown-backend"
path = "src/main.rs"

[lib]
name = "taskdown_backend"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
jsonwebtoken = "9.0"
bcrypt = "0.15"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "15.0"
tempfile = "3.0"
serde_json = "1.0"
